# fuzzy_find-rs

./: .gitignore  CREDITS.md  Cargo.toml  LICENSE  README.md  build.rs
src/: algorithms.rs  lib.rs  util.rs
